Compucom CCQA/src/objects/FCST_Initial_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Contract_LineItem__r.FCST_Contract__r.Fcst_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_OwnerId__c</fullName>
        <formula>Account__r.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FCST Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Initial_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments Unused Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_LineItem__c</fullName>
        <label>Contract LineItem</label>
        <referenceTo>Contract_LineItem__c</referenceTo>
        <relationshipLabel>FCST Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Initial_Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FCST_Baseline_Created_Year__c</fullName>
        <formula>VALUE(Contract_LineItem__r.FCST_Contract__r.FCST_Contract_Created_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCST Baseline Created Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCST_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Contract</label>
        <referenceTo>FCST_Contract__c</referenceTo>
        <relationshipLabel>FCST Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Initial_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCST_Fiscal_Year_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Fiscal Year List</label>
        <referenceTo>Fiscal_Year_Planning__c</referenceTo>
        <relationshipLabel>FCST Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Initial_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCST_Planning_Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Planning Fiscal Year</label>
        <referenceTo>Fiscal_Year_Model__c</referenceTo>
        <relationshipLabel>FCST Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Initial_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fcst_Amount__c</fullName>
        <label>Fcst Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <formula>FCST_Planning_Fiscal_Year__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_with_Risk__c</fullName>
        <formula>Fcst_Amount__c +  RiskAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast with Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>LEFT( FCST_Contract__c,15) &amp; &apos;#&apos; &amp; LEFT(Contract_LineItem__c,15) &amp; &apos;#&apos; &amp; LEFT( FCST_Planning_Fiscal_Year__c ,15) &amp; &apos;#&apos; &amp; LEFT( Planning_Version__c ,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Version</label>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>FCST Initial Forecasts</relationshipLabel>
        <relationshipName>FCST_Initial_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskAmount__c</fullName>
        <formula>round(Fcst_Amount__c  *Risk_Factor__c * -1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RiskAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Factor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Risk Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>FCST Initial Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FCST Initial Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FCST Initial Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>